# CodeSmith

./: .gitignore  Cargo.toml  README.ko.md  README.md
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
crates/wiki/: Cargo.toml
crates/wiki/src/: lib.rs
docs/: VERSIONING.ko.md  VERSIONING.md  architecture.ko.md  architecture.md  v1-release-notes.ko.md  v1-release-notes.md
docs/research/: claude-claurst-cli-notes.md
docs/superpowers/plans/: 2026-04-25-codesmith-cli.md
