[workspace]
members = [
    "crates/agent",
    "crates/app",
    "crates/cli",
    "crates/core",
    "crates/llm",
    "crates/policy",
    "crates/runner",
    "crates/storage",
    "crates/ui",
    "crates/wiki",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.91"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
eframe = "=0.33.3"
egui = "=0.33.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.9"
uuid = { version = "1", features = ["serde", "v4"] }
wiremock = "0.6"
