[package]
name = "codesmith-runner"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
codesmith-core = { path = "../core" }
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
