[package]
name = "codesmith-ui"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
codesmith-agent = { path = "../agent" }
codesmith-core = { path = "../core" }
codesmith-llm = { path = "../llm" }
codesmith-policy = { path = "../policy" }
codesmith-runner = { path = "../runner" }
codesmith-storage = { path = "../storage" }
codesmith-wiki = { path = "../wiki" }
dirs.workspace = true
eframe.workspace = true
egui.workspace = true
tokio.workspace = true
uuid.workspace = true
